Added comments for secrets

--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -6,7 +6,10 @@ on:
         description: The name of the deployable artifact files
         required: false
         default: dist
-        type: string  
+        type: string
+    # secrets:
+    #   some-secret:
+    #     required: false  
 jobs:
   deploy:
     runs-on: ubuntu-latest
